Bug fixes
Moved thin scrollbar css into fixes

--- a/css/dark.css
+++ b/css/dark.css
@@ -437,5 +437,4 @@ img[src="/templates/modern/images/404.svg"] {
 }
 html {
     scrollbar-color: #595959 #272626;
-	scrollbar-width: thin;
 }
